# discord_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  build-local.sh  docker-compose.yml  go.mod  go.sum  run-local.sh
.github/: pull_request_template.md
.github/workflows/: deploy-cicd.yaml  docker-cicd.yaml  go-cicd.yaml  main-push.yaml  main_push.yaml  pull-request.yaml  test-deploy-cicd.yaml  test-deploy.yaml  test_workflow.yaml
banger-spotify-worker/: README.md  package-lock.json  package.json  pyproject.toml
banger-spotify-worker/src/: main.py
cmd/: logger.go  main.go
constants/channelid/: channelid.go
constants/envvar/: constants.go
constants/id/: channelid.go
constants/zapkey/: zapkeys.go
debug/: client.go  logger.go
discord/: action.go  client.go  consts.go  interactions.go  logger.go  messages.go  options.go  ready.go
discord/channel/: channeltypes.go
discord/config/: config.go  logger.go
log/: logger.go
spotify/: authentication.go  client.go  logger.go  options.go  playlist.go  trackfinder.go  tracks.go  users.go  worker_transport.go
spotify/config/: config.go
spotify/track/: tracks.go
spotify/worker/: client.go
tools/cloudflare-auth/: wrangler.jsonc
tools/cloudflare-auth/src/: main.py
utils/ctxutil/: zap.go
utils/httputil/: httputils.go
utils/stringutil/: strings.go
